# cctvcpp

./: .gitignore  CMakeLists.txt  Makefile  pyproject.toml
rl_agent/: agent_runner.py  audio_pipeline.py  emotion_reward.py  features.py  high_level_agent.py  low_level_agent.py  metrics.py  networks.py  policy.py  rewards.py  shader_registry.py  shared_types.py  train_offline.py  visual_emotion.py  vj_commands.json
shaders/: bloom.frag  chromatic.frag  color_grade.frag  edge_detect.frag  feedback.frag  glitch.frag  kaleidoscope.frag
src/: frame_export.h  json_bridge.h  main.cpp  render_pipeline.cpp  render_pipeline.h  shader_manager.cpp  shader_manager.h  video_source.cpp  video_source.h  vj_engine.h
