[project]
name = "cctvcpp"
version = "0.1.0"
description = "VJing Engine powered by a RL agent learning visualisation behaviors"
authors = [
    {name = "epsilon",email = "martin.olivier1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "transformers (>=5.8.1,<6.0.0)",
    "torchvision (>=0.27.0,<0.28.0)",
    "mlflow (>=3.12.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
